# AlethieumAevoSDK

./: .gitignore  AlethieumAevoSDK.py  README.md  aevoAuthentication.py  aevoGridbot.py  aevoPlaceOrder.py  clientConfigExample.py  clientTest.py  clientTestWebhook.py  configExample.py  pyproject.toml
docs/: README.md  SECURITY.md
